# AnkiInject

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
app/: ai.py  anki.py  bridge.py  gui.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: generate-icons.js
frontend/src/: App.svelte  app.css  main.ts
packaging/: anki-inject.desktop
scripts/: build_appimage.sh  build_frontend.sh
