[project]
name = "anki-inject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "google-genai>=1.56.0",
    "pillow>=12.0.0",
    "pyqt5>=5.15.11",
    "pyqtwebengine>=5.15.7",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "qtpy>=2.4.3",
    "requests>=2.32.5",
]
